# Corpus-CPP

./: .gitignore  CMakeLists.txt  Corpus.cpp  Corpus.h  FileDescription.cpp  Paragraph.cpp  Paragraph.h  README.md  Sentence.cpp  Sentence.h  SentenceSplitter.cpp  SentenceSplitter.h  TestCorpus.cpp  TurkishChecker.h  TurkishSplitter.cpp  TurkishSplitter.h  conanfile.py  conanfile.txt
Test/: CorpusStreamTest.cpp  CorpusTest.cpp  EnglishSplitterTest.cpp  FileDescriptionTest.cpp  SentenceTest.cpp  TurkishSplitterTest.cpp
include/: CounterHashMap.h  EnglishLanguage.h  TurkishLanguage.h  Word.h
src/: AbstractCorpus.h  CMakeLists.txt  Corpus.cpp  Corpus.h  CorpusStream.cpp  CorpusStream.h  EnglishSplitter.cpp  EnglishSplitter.h  FileDescription.cpp  FileDescription.h  LanguageChecker.h  Paragraph.cpp  Paragraph.h  Sentence.cpp  Sentence.h  SentenceSplitter.cpp  SentenceSplitter.h  TurkishChecker.cpp  TurkishChecker.h  TurkishSplitter.cpp  TurkishSplitter.h
